# backend/schemas/openapi.json
@@ -1242,8 +1242,15 @@
       "UpdateUserRequest": {
         "properties": {
           "user_id": {
-            "type": "string",
-            "format": "uuid",
+            "anyOf": [
+              {
+                "type": "string",
+                "format": "uuid"
+              },
+              {
+                "type": "null"
+              }
+            ],
             "title": "User Id"
           },
           "team_id": {
@@ -1258,13 +1265,23 @@
             ],
             "title": "Team Id"
           },
+          "username": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Username"
+          },
           "action": {
             "$ref": "#/components/schemas/UpdateUserOption"
           }
         },
         "type": "object",
         "required": [
-          "user_id",
           "action"
         ],
         "title": "UpdateUserRequest"
